<resources>
    <string name="app_name">UCS(Monywa)</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_timetable">Timetable</string>
    <string name="menu_noticeboard">Notice Board</string>
    <string name="menu_examresult">Exam Result</string>
    <string name="menu_activities">Activities</string>
    <string name="menu_favourite">Favourite</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_about">About</string>


</resources>
